tests/paczka1/fuzzy1/55483830.err
Error in line 8: NGX A551 58,81
Error in line 7: IFo0ac8BD A551 10,9
Error in line 3: NGX A551 81,8
Error in line 16: wQWbt A888 25,8
Error in line 22: wQWbt A551 3,1
Error in line 24: bQMxAaIET S403 37,2
Error in line 26: 8HEa1tiIJjG A551 95,3
Error in line 12: 8PFDkUyAbaZ S403 82,3
Error in line 31: 8PFDkUyAbaZ A888 80,2
